# logger

./: CMakeLists.txt  main.cpp
consoleLog/: consoleLogger.cpp  consoleLogger.h
fileLog/: fileLogger.cpp  fileLogger.h
globLog/: globLogger.cpp  globLogger.h
interfaceForLogs/: Ilogger.cpp  Ilogger.h
logFactory/: logger.cpp  logger.h
